syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.stablecoin.app.proto";
option java_multiple_files = true;

message Snapshot {
    string tokenName = 1;
    string tokenSymbol = 2;
    uint32 tokenDecimal = 3;
    bytes totalSupply = 4;
    bytes owner = 5;
    bytes supplyManager = 6;
    bytes complianceManager = 7;
    bytes proposedOwner = 8;
    repeated AddressEntry addresses = 9;
    repeated AllowanceEntry allowances = 10;
}

message AddressEntry {
    bytes address = 1;
    bytes balance = 2;

    // bit 1 = kyc
    // bit 2 = frozen
    int32 flags = 3;
}

message AllowanceEntry {
    bytes address = 1;
    bytes otherAddress = 2;
    bytes allowance = 3;
}
